# xdg-desktop-portal-gtk

./: .gitignore  .gitmodules  Makefile.am  NEWS  NEWS.md  README.md  SECURITY.md  appchooser.c  appchooser.h  appchooserdialog.c  appchooserdialog.h  appchooserdialog.ui  appchooserrow.c  appchooserrow.h  appchooserrow.ui  configure.ac  filechooser.c  filechooser.h  gtk.portal  inhibit.c  meson.build  meson_options.txt  notification.c  org.freedesktop.impl.portal.desktop.gtk.service.in  print.c  print.h  screenshot.c  screenshot.h  screenshotdialog.c  screenshotdialog.ui  xdg-desktop-portal-gtk.c  xdg-desktop-portal-gtk.gresource.xml  xdg-desktop-portal-gtk.h
.github/workflows/: Containerfile  build-and-test.yml  container.yml  main.yml  release.yml  test.yml
data/: Makefile.am.inc  gtk.portal  gtk.portal.in  meson.build  org.freedesktop.Accounts.User.xml  org.freedesktop.ScreenSaver.xml  org.freedesktop.impl.portal.desktop.gtk.service.in  org.gnome.Mutter.RemoteDesktop.xml  org.gnome.Shell.Screenshot.xml  org.gtk.Notifications.xml  xdg-desktop-portal-gtk.desktop.in.in  xdg-desktop-portal-gtk.service.in
po/: LINGUAS  Makevars  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  lt.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  xdg-desktop-portal-gtk.po-ui.main.pt.po  zh_CN.po  zh_TW.po
src/: Makefile.am.inc  access.c  access.h  account.c  account.h  accountdialog.c  accountdialog.h  accountdialog.ui  appchooser.c  appchooser.h  appchooserdialog.c  appchooserdialog.css  appchooserdialog.h  appchooserdialog.ui  appchooserrow.c  appchooserrow.h  appchooserrow.ui  background.c  background.h  displaystatetracker.c  displaystatetracker.h  dynamic-launcher.c  dynamic-launcher.h  email.c  email.h  externalwindow-wayland.c  externalwindow-wayland.h  externalwindow-x11.c  externalwindow-x11.h  externalwindow.c  externalwindow.h  fc-monitor.c  fdonotification.c  fdonotification.h  filechooser.c  filechooser.h  gnomescreencast.c  gnomescreencast.h  gsd-remote-display-manager.c  gsd-remote-display-manager.h  (+51 more)
